--- a/supervisord.conf
+++ b/supervisord.conf
@@ -6,7 +6,7 @@ logfile_maxbytes=0
 loglevel=error
 
 [program:xvfb]
-command=Xvfb :99 -screen 0 %(ENV_RESOLUTION)s -ac +extension GLX +render -noreset
+command=Xvfb :99 -screen 0 %(ENV_ENV_RESOLUTION)s -ac +extension GLX +render -noreset
 autorestart=true
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
@@ -18,7 +18,7 @@ stopsignal=TERM
 stopwaitsecs=10
 
 [program:vnc_setup]
-command=bash -c "mkdir -p ~/.vnc && echo '%(ENV_VNC_PASSWORD)s' | vncpasswd -f > ~/.vnc/passwd && chmod 600 ~/.vnc/passwd && ls -la ~/.vnc/passwd"
+command=bash -c "mkdir -p ~/.vnc && echo '%(ENV_ENV_VNC_PASSWORD)s' | vncpasswd -f > ~/.vnc/passwd && chmod 600 ~/.vnc/passwd && ls -la ~/.vnc/passwd"
 autorestart=false
 startsecs=0
 priority=150
@@ -28,53 +28,39 @@ stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
 
 [program:x11vnc]
-command=bash -c "mkdir -p /var/log && touch /var/log/x11vnc.log && chmod 666 /var/log/x11vnc.log && sleep 5 && DISPLAY=:99 x11vnc -display :99 -forever -shared -rfbauth ~/.vnc/passwd -rfbport 5901 -o /var/log/x11vnc.log"
+command=bash -c "mkdir -p /var/log && touch /var/log/x11vnc.log && x11vnc -display :99 -rfbauth ~/.vnc/passwd -shared -forever -rfbport 5901 -logfile /var/log/x11vnc.log -bg -o /var/log/x11vnc.log"
 autorestart=true
+startsecs=5
+priority=200
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-priority=200
-startretries=10
-startsecs=10
 stopsignal=TERM
 stopwaitsecs=10
-depends_on=vnc_setup,xvfb
-
-[program:x11vnc_log]
-command=bash -c "mkdir -p /var/log && touch /var/log/x11vnc.log && tail -f /var/log/x11vnc.log"
-autorestart=true
-stdout_logfile=/dev/stdout
-stdout_logfile_maxbytes=0
-stderr_logfile=/dev/stderr
-stderr_logfile_maxbytes=0
-priority=250
-stopsignal=TERM
-stopwaitsecs=5
-depends_on=x11vnc
 
 [program:novnc]
-command=bash -c "sleep 5 && cd /opt/novnc && ./utils/novnc_proxy --vnc localhost:5901 --listen 0.0.0.0:6080 --web /opt/novnc"
+command=bash -c "cd /noVNC && ./utils/novnc_proxy --vnc localhost:5901 --listen 6080"
 autorestart=true
+startsecs=10
+priority=300
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-priority=300
-startretries=5
-startsecs=3
-depends_on=x11vnc
+stopsignal=TERM
+stopwaitsecs=10
 
 [program:webui]
-command=python webui.py --ip 0.0.0.0 --port 7788
+command=python webui.py --ip 0.0.0.0 --port %(ENV_PORT)s
 directory=/app
 autorestart=true
+startsecs=15
+priority=400
 stdout_logfile=/dev/stdout
 stdout_logfile_maxbytes=0
 stderr_logfile=/dev/stderr
 stderr_logfile_maxbytes=0
-priority=400
-startretries=3
-startsecs=3
+environment=DISPLAY=:99
 stopsignal=TERM
 stopwaitsecs=10
