Обновить переменные окружения и конфиги для деплоя на Dokploy

--- a/supervisord.conf
+++ b/supervisord.conf
@@ -40,7 +40,7 @@ stopsignal=TERM
 stopwaitsecs=10
 
 [program:novnc]
-command=bash -c "cd /noVNC && ./utils/novnc_proxy --vnc localhost:5901 --listen 6080"
+command=bash -c "cd /opt/novnc && ./utils/novnc_proxy --vnc localhost:5901 --listen 6080"
 autorestart=true
 startsecs=10
 priority=300
