🔧 Add custom browser support for Docker deployment
✅ Added complete custom browser configuration:
- DOKPLOY_CUSTOM_BROWSER.md with two setup variants
- Environment variable support in docker-compose.yml and docker-compose.prod.yml
- Support for USE_OWN_BROWSER=true configuration

🔧 Key features:
- BROWSER_PATH support for custom browser executable
- BROWSER_USER_DATA for custom profile directory
- BROWSER_DEBUGGING_HOST=0.0.0.0 for Docker container access
- Auto-detection option with BROWSER_PATH=auto

🚀 Users can now choose between:
- Built-in Playwright browsers (USE_OWN_BROWSER=false)
- Custom browser setup (USE_OWN_BROWSER=true)

Ready for deployment with either browser option! 🎯

--- a/docker-compose.prod.yml
+++ b/docker-compose.prod.yml
@@ -46,12 +46,12 @@ services:
       - NODE_ENV=production
 
       # Browser Settings
-      - BROWSER_PATH=
-      - BROWSER_USER_DATA=
+      - BROWSER_PATH=${BROWSER_PATH:-}
+      - BROWSER_USER_DATA=${BROWSER_USER_DATA:-}
       - BROWSER_DEBUGGING_PORT=${BROWSER_DEBUGGING_PORT:-9222}
-      - BROWSER_DEBUGGING_HOST=localhost
-      - USE_OWN_BROWSER=false
-      - KEEP_BROWSER_OPEN=true
+      - BROWSER_DEBUGGING_HOST=${BROWSER_DEBUGGING_HOST:-0.0.0.0}
+      - USE_OWN_BROWSER=${USE_OWN_BROWSER:-false}
+      - KEEP_BROWSER_OPEN=${KEEP_BROWSER_OPEN:-true}
       - BROWSER_CDP=${BROWSER_CDP}
 
       # Display Settings
