--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -44,12 +44,12 @@ services:
       - BROWSER_USE_LOGGING_LEVEL=${BROWSER_USE_LOGGING_LEVEL:-info}
 
       # Browser Settings
-      - BROWSER_PATH=
-      - BROWSER_USER_DATA=
+      - BROWSER_PATH=${BROWSER_PATH:-}
+      - BROWSER_USER_DATA=${BROWSER_USER_DATA:-}
       - BROWSER_DEBUGGING_PORT=${BROWSER_DEBUGGING_PORT:-9222}
-      - BROWSER_DEBUGGING_HOST=localhost
-      - USE_OWN_BROWSER=false
-      - KEEP_BROWSER_OPEN=true
+      - BROWSER_DEBUGGING_HOST=${BROWSER_DEBUGGING_HOST:-localhost}
+      - USE_OWN_BROWSER=${USE_OWN_BROWSER:-false}
+      - KEEP_BROWSER_OPEN=${KEEP_BROWSER_OPEN:-true}
       - BROWSER_CDP=${BROWSER_CDP:-} # e.g., http://localhost:9222
 
       # Display Settings
